# iced_video_player

./: Cargo.toml
examples/: minimal.rs
src/: lib.rs  pipeline.rs  video.rs  video_player.rs
