[package]
name = "iced_video_player"
description = "A convenient video player widget for Iced"
homepage = "https://github.com/jazzfool/iced_video_player"
repository = "https://github.com/jazzfool/iced_video_player"
readme = "README.md"
keywords = ["gui", "iced", "video"]
categories = ["gui", "multimedia"]
version = "0.2.0"
authors = ["jazzfool"]
edition = "2021"
resolver = "2"
license = "MIT OR Apache-2.0"
exclude = [
    ".media/test.mp4"
]

[dependencies]
iced = { version = "0.12", features = ["image", "advanced", "wgpu"] } 
iced_native = "0.10"
iced_wgpu = "0.12"
glib = "0.19" # gobject traits and error type
thiserror = "1" 
url = "2" # media uri
video-rs = { version = "0.9.0", features = ["ndarray"] }
tracing = "0.1.40"
ffmpeg-next = "7.0.4"
parking_lot = "0.12.3"
kanal = "0.1.0-pre8"

[dev-dependencies]
tracing-subscriber = "0.3.18"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["wasm32-unknown-unknown"]
